stages/stage2/k8s/infra/redis/catalog-redis-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-redis
  namespace: apollo11-infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-redis
  template:
    metadata:
      labels:
        app: catalog-redis
    spec:
      serviceAccountName: apollo11-infra
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          command: ["redis-server"]
          volumeMounts:
            - name: redis-data
              mountPath: /data
      volumes:
        - name: redis-data
          emptyDir: {}
