stages/stage2/k8s/infra/redis/notification-redis-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-redis
  namespace: apollo11-infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-redis
  template:
    metadata:
      labels:
        app: notification-redis
    spec:
      serviceAccountName: apollo11-infra
      containers:
        - name: redis
          image: redis:7-alpine
          command: ["redis-server", "--port", "6380"]
          ports:
            - containerPort: 6380
          volumeMounts:
            - name: redis-data
              mountPath: /data
      volumes:
        - name: redis-data
          emptyDir: {}
