stages/stage2/k8s/infra/redis/catalog-redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-redis
  namespace: apollo11-infra
spec:
  selector:
    app: catalog-redis
  ports:
    - port: 6379
      targetPort: 6379
