stages/stage2/k8s/infra/redis/notification-redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-redis
  namespace: apollo11-infra
spec:
  selector:
    app: notification-redis
  ports:
    - port: 6380
      targetPort: 6380
