stages/stage2/k8s/infra/redis/redis-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: apollo-airlines-infra
spec:
  clusterIP: None
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
