stages/stage2/k8s/infra/redis/redis-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-allow-apps
  namespace: apollo-airlines-infra
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: apollo-airlines
              app.kubernetes.io/component: apps
      ports:
        - protocol: TCP
          port: 6379
  policyTypes:
    - Ingress
